# riskmonitor

./: .gitignore  README.md  requirements.txt  setup.cfg
data/sample_articles/: 7374406743.json  7378133121.json  7378752068.json  7378759995.json  7378774447.json  7386643546.json  7388484030.json  7388631374.json  7389650681.json  7394387766.json
data/sample_events/: eng-8400357.json  eng-8401701.json  spa-3013075.json  spa-3025513.json  zho-1366822.json
notebooks/: demo_dataloader.ipynb  scraper.ipynb
riskmonitor/configs/: apicredentials.py  config.py
riskmonitor/dataloader/: __init__.py  dataloader.py
riskmonitor/datamodel/: __init__.py
riskmonitor/utils/: flattendict.py
scripts/: demo.py  demo_datamodel.py  main.py
