[metadata]
name = riskmonitor
version = 1.0
author = Joshua Le
author_email = phuonglevu3112@gmail.com
description = NLP with articles from newsapi
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joshuavaple/riskmonitor
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
packages = find:

[options.packages.find]
include = riskmonitor